--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/luxon": "^2.0.4",
     "@types/node": "^12.20.25",
     "@types/react": "^16.14.15",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.9",
     "dotenv": "^10.0.0",
+    "luxon": "^2.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
