--- a/package.json
+++ b/package.json
@@ -3,32 +3,42 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@craco/craco": "^6.3.0",
+        "@craco/craco": "^5.9.0",
         "@reduxjs/toolkit": "^1.6.1",
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.5.0",
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^7.2.1",
-        "@types/jest": "^24.9.1",
+        "@types/axios": "^0.14.0",
+        "@types/jest": "^27.0.2",
         "@types/luxon": "^2.0.4",
         "@types/node": "^12.20.25",
+        "@types/passport-google-oauth": "^1.0.42",
         "@types/react": "^16.14.15",
         "@types/react-dom": "^16.9.14",
         "@types/react-redux": "^7.1.18",
         "@types/react-router-dom": "^5.1.9",
+        "@types/redux-persist": "^4.3.1",
+        "ajv": "^8.6.3",
+        "axios": "^0.23.0",
         "dotenv": "^10.0.0",
+        "google-auth-library": "^7.10.1",
         "luxon": "^2.0.2",
+        "passport-google-oauth": "^2.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-google-login": "^5.2.2",
         "react-redux": "^7.2.5",
         "react-router": "^5.2.1",
         "react-router-dom": "^5.3.0",
-        "react-scripts": "4.0.3",
+        "react-scripts": "^4.0.3",
+        "redux-persist": "^6.0.0",
+        "rxjs": "^7.4.0",
         "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^2.0.3",
         "typescript": "~4.1.5"
     },
     "scripts": {
-        "start": "craco start",
+        "start": "export PORT='7380' && craco start",
         "build": "craco build",
         "test": "craco test",
         "eject": "react-scripts eject"
